--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "fastify start index.js",
-    "serve": "node index.js"
+    "serve": "node index.js",
+    "start": "fastify start index.js"
   },
   "dependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "fastify": "^2.15.3",
     "fastify-cli": "^2.13.0"
   }
