--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index.js",
-    "start": "fastify start index.js"
+    "serve": "node index.js"
   },
   "dependencies": {
     "eslint": "^7.32.0",
