--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rest-api-test",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=12.21.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node index.js"
@@ -11,6 +14,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "fastify": "^2.15.3",
-    "fastify-cli": "^2.13.0"
+    "fastify-cli": "^2.13.0",
+    "lodash": "^4.17.21"
   }
 }
