--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "^2.24.2",
     "fastify": "^2.15.3",
     "fastify-cli": "^2.13.0",
+    "http-errors": "^1.8.0",
     "lodash": "^4.17.21"
   }
 }
